adding build number to jenkins pipeline

--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Build-Version>${build.number}</Build-Version>
+                            <Build-Version>${build_number}</Build-Version>
                         </manifestEntries>
                     </archive>
                 </configuration>
