--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
 
     <properties>
         <java.version>11</java.version>
-        <kotlin.version>1.3.50</kotlin.version>
         <javafx-version>13</javafx-version>
     </properties>
 
@@ -78,6 +77,9 @@
         </dependency>
     </dependencies>
 
+    <scm>
+        <developerConnection>scm:git:https://github.com/frbo42/kdiff.git</developerConnection>
+    </scm>
     <build>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
@@ -106,18 +108,31 @@
                 </dependencies>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
                         <manifestEntries>
-<!--                            <Build-Version>${env.BUILD_NUMBER}</Build-Version>-->
                             <Build-Version>${build.number}</Build-Version>
                         </manifestEntries>
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <tagBase>https://github.com/frbo42/kdiff/tags</tagBase>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+<!--    <distributionManagement>-->
+<!--        <repository>-->
+<!--            <id>mypkfit-artifactory</id>-->
+<!--            <name>My Pkfit Artifactory</name>-->
+<!--            <url>https://package-repo.mypkfit.com/artifactory/libs-staging-local</url>-->
+<!--        </repository>-->
+<!--    </distributionManagement>-->
 
 </project>
