--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.1.RELEASE</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>org.fb</groupId>
     <artifactId>kdiff</artifactId>
     <version>0.0.2-SNAPSHOT</version>
+
     <name>kdiff</name>
     <description>Showing and merging folders</description>
 
@@ -78,8 +81,9 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/frbo42/kdiff.git</developerConnection>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
+
     <build>
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
@@ -117,22 +121,7 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
-                <configuration>
-                    <tagBase>https://github.com/frbo42/kdiff/tags</tagBase>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
-
-<!--    <distributionManagement>-->
-<!--        <repository>-->
-<!--            <id>mypkfit-artifactory</id>-->
-<!--            <name>My Pkfit Artifactory</name>-->
-<!--            <url>https://package-repo.mypkfit.com/artifactory/libs-staging-local</url>-->
-<!--        </repository>-->
-<!--    </distributionManagement>-->
 
 </project>
